Add title and description to _config.yml.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
+title: VR Capstone - Spring 2021 - University of Washington - Team CATE
+description: Team CATE's website for the University of Washington's VR Capstone
 theme: jekyll-theme-cayman
