--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-title: VR Capstone - Spring 2021 - University of Washington - Team CATE
+title: VR Dodgeball
 description: Team CATE's website for the University of Washington's VR Capstone
 theme: jekyll-theme-cayman
