--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 title: VR Dodgeball
-description: Team CATE's website for the University of Washington's VR Capstone
+description: University of Washington, Spring 2021, VR Capstone - Team CATE
 theme: jekyll-theme-cayman
